ajout d'une première case de formulaire

--- a/formulaire.html
+++ b/formulaire.html
@@ -7,7 +7,8 @@
   </head>
   <body>
     <form method="post" action="traitement.php">
-
+      <label for="Nom">Nom : </label>
+      <input type="text" name="Nom" id="Nom">
     </form>
   </body>
 </html>
