ajout de cases de formulaire

--- a/formulaire.html
+++ b/formulaire.html
@@ -9,6 +9,12 @@
     <form method="post" action="traitement.php">
       <label for="Nom">Nom : </label>
       <input type="text" name="Nom" id="Nom">
+
+      <label for="Prénom">Prénom : </label>
+      <input type="text" name="Prénom" id="Prénom">
+
+      <label for="Adresse mail">Adresse mail : </label>
+      <input type="text" name="Adresse mail" id="Adresse mail">
     </form>
   </body>
 </html>
