ajout de la liste permettant d'aligner le formulaire

--- a/formulaire.html
+++ b/formulaire.html
@@ -6,15 +6,16 @@
     <link rel="stylesheet" href="formulaire.css">
   </head>
   <body>
+    <ul>
     <form method="post" action="traitement.php">
-      <label for="Nom">Nom : </label>
-      <input type="text" name="Nom" id="Nom">
+      <li><label for="Nom">Nom : </label>
+      <input type="text" name="Nom" id="Nom"></li>
 
-      <label for="Prénom">Prénom : </label>
-      <input type="text" name="Prénom" id="Prénom">
+      <li><label for="Prénom">Prénom : </label>
+      <input type="text" name="Prénom" id="Prénom"></li>
 
-      <label for="Adresse mail">Adresse mail : </label>
-      <input type="text" name="Adresse mail" id="Adresse mail">
+      <li><label for="Adresse mail">Adresse mail : </label>
+      <input type="text" name="Adresse mail" id="Adresse mail"></li>
     </form>
   </body>
 </html>
