--- a/formulaire.html
+++ b/formulaire.html
@@ -7,15 +7,18 @@
   </head>
   <body>
     <ul>
+      <p>Votre identité</p>
+
     <form method="post" action="traitement.php">
       <li><label for="Nom">Nom : </label>
-      <input type="text" name="Nom" id="Nom"></li>
+      <input type="text" name="Nom" id="Nom" placeholder="Nom"></li>
 
       <li><label for="Prénom">Prénom : </label>
-      <input type="text" name="Prénom" id="Prénom"></li>
+      <input type="text" name="Prénom" id="Prénom" placeholder="Prénom"></li>
 
       <li><label for="Adresse mail">Adresse mail : </label>
-      <input type="text" name="Adresse mail" id="Adresse mail"></li>
+      <input type="text" name="Adresse mail" id="Adresse mail"
+        placeholder="Adresse mail"></li>
     </form>
   </body>
 </html>
