--- a/formulaire.html
+++ b/formulaire.html
@@ -7,8 +7,8 @@
   </head>
   <body>
     <ul>
-      <p>Votre identité</p>
-
+      <p><mark>Votre identité</mark></p>
+    <div class="rectangle">
     <form method="post" action="traitement.php">
       <li><label for="Nom">Nom : </label>
       <input type="text" name="Nom" id="Nom" placeholder="Nom"></li>
@@ -19,6 +19,7 @@
       <li><label for="Adresse mail">Adresse mail : </label>
       <input type="text" name="Adresse mail" id="Adresse mail"
         placeholder="Adresse mail"></li>
+    </div>
     </form>
   </body>
 </html>
