ajout d'une deuxième partie de formulaire

--- a/formulaire.html
+++ b/formulaire.html
@@ -20,6 +20,18 @@
       <input type="text" name="Adresse mail" id="Adresse mail"
         placeholder="Adresse mail"></li>
     </div>
+      <p>Adresse de livraison</p>
+
+      <form method="post" action="traitement.php">
+        <li><label for="Adresse">Adresse : </label>
+        <textarea name="Adresse" id="Adresse"></textarea></li>
+
+        <li><label for="Code Postal">Code Postal : </label>
+        <input type="text" name="Code Postal" id="Code Postal"
+        placeholder="Code Postal"></li>
+
+        <li><label for="Ville">Ville : </label>
+        <input type="text" name="Ville" id="Ville" placeholder="Ville"></li>
     </form>
   </body>
 </html>
