ajout du fond de la deuxième partie de formulaire et changement de réglages css

--- a/formulaire.html
+++ b/formulaire.html
@@ -8,7 +8,9 @@
   <body>
     <ul>
       <p><mark>Votre identité</mark></p>
+    </ul>
     <div class="rectangle">
+    <ul>
     <form method="post" action="traitement.php">
       <li><label for="Nom">Nom : </label>
       <input type="text" name="Nom" id="Nom" placeholder="Nom"></li>
@@ -19,9 +21,13 @@
       <li><label for="Adresse mail">Adresse mail : </label>
       <input type="text" name="Adresse mail" id="Adresse mail"
         placeholder="Adresse mail"></li>
+    </ul>
     </div>
+    <ul>
       <p>Adresse de livraison</p>
-
+    </ul>
+    <div class="rectangle2">
+    <ul>
       <form method="post" action="traitement.php">
         <li><label for="Adresse">Adresse : </label>
         <textarea name="Adresse" id="Adresse"></textarea></li>
@@ -32,6 +38,8 @@
 
         <li><label for="Ville">Ville : </label>
         <input type="text" name="Ville" id="Ville" placeholder="Ville"></li>
+    </ul>
+    </div>
     </form>
   </body>
 </html>
