--- a/formulaire.html
+++ b/formulaire.html
@@ -8,6 +8,7 @@
   <body>
 <!--Première partie de formulaire-->
       <mark>Votre identité</mark><br>
+  <div class="border">
     <div class="rectangle">
     <ul>
     <form method="post" action="traitement.php">
@@ -22,8 +23,10 @@
         placeholder="Adresse mail"></li>
     </ul>
     </div>
+  </div>
 <!--Deuxième partie de formulaire-->
       Adresse de livraison <br>
+  <div class="border">
     <div class="rectangle2">
     <ul>
       <form method="post" action="traitement.php">
@@ -38,14 +41,18 @@
         <input type="text" name="Ville" id="Ville" placeholder="Ville"></li>
     </ul>
     </div>
+  </div>
 <!--Troisième partie de formulaire-->
       Information de réglement <br>
+    <div class="border">
+      <div class=rectangle3>
       <ul>
       <form method="post" action="traitement.php">
+        <li>Type de carte bancaire :<br>
         <input type="radio" name="Type de carte" value="Visa" id="Visa">
             <label for="Type de carte"> Visa </label><br>
             <input type="radio" name="Type de carte" value="Master" id="Master">
-            <label for="Type de carte"> Master </label>
+            <label for="Type de carte"> Master </label></li>
 
         <li><label for="Numéro de carte">Numéro de carte : </label>
         <input type="text" name="Numéro de carte" id="Numéro de carte"
@@ -59,6 +66,8 @@
         <input type="text" name="Nom du titulaire" id="Nom du titulaire"
           placeholder="Nom du titulaire"></li>
       </ul>
+    </div>
+  </div>
     </form>
   </body>
 </html>
