ajout du bouton

--- a/formulaire.html
+++ b/formulaire.html
@@ -69,5 +69,8 @@
     </div>
   </div>
     </form>
+    <form action="#">
+      <button type="button">J'achète !</button>
+    </form>
   </body>
 </html>
